<resources>
    <string name="app_name">AppGPS</string>
    <string name="bienvenida">Bienvenido(a) a nuestro GPS</string>
    <string name="primerPaso">Para iniciar, por favor de click en empezar!</string>
    <string name="btnEmpezar">Empezar</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="altitud">Altitud</string>
    <string name="direccion">Dirección real</string>
    <string name="btnSalir">Salir</string>
    <string name="btnGPS">Obtener coordenadas</string>
</resources>